--- a/accompany-consullting/src/app/entretient/entretient.component.html
+++ b/accompany-consullting/src/app/entretient/entretient.component.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 mt-5">
      
-        <form [formGroup]="entretienForm" (ngSubmit)="addEntretien()">
+        <form [formGroup]="entretienForm">
             <div class="p-20 bg-info ">
                 <h4 class="card-title text-white m-0 text-center">Description du poste </h4></div>
          
