--- a/accompany-consullting/src/app/list-entretien/list-entretien.component.html
+++ b/accompany-consullting/src/app/list-entretien/list-entretien.component.html
@@ -1,22 +1,64 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<mat-card>
+    <div class="p-20 bg-info position-relative">
+        <h4 class="card-title text-white m-0">Liste des entretiens </h4>
+   
+           
+
+    </div>
+
+
+
+<br><br>
+
+
+<div class="row col-12">
+<div class="col-1">
+    <button mat-raised-button color="primary" (click)="filteredEntretiensbyaction('Historique')">Historique</button>
+</div>
+<div class="col-9">
+    <button mat-raised-button color="primary" (click)="allentretien()">Entretien à faire</button>
+</div>
+</div>
+
+
+<br>
+<br>
+<br>
+<div class="row col-12">
+    <div class="col-1">
+        <button type="button" class="btn btn-outline-info" (click)="add()">Nouveau Recrutement</button>        </div>
+    
+</div>
+
+<br>
+<br>
+
+<div class="col-12">
+    <table class="table mat-elevation-z8" style="width: 100%;" mat-table [dataSource]="dataSource">
+ 
     <ng-container matColumnDef="avis">
       <th mat-header-cell *matHeaderCellDef>Avis</th>
       <td mat-cell *matCellDef="let entretien">{{ entretien.avis }}</td>
     </ng-container>
   
     <ng-container matColumnDef="statut">
-      <th mat-header-cell *matHeaderCellDef>Statut</th>
+      <th mat-header-cell *matHeaderCellDef>statut</th>
       <td mat-cell *matCellDef="let entretien">{{ entretien.statut }}</td>
     </ng-container>
-    <ng-container matColumnDef="recruteur">
-        <th mat-header-cell *matHeaderCellDef>Statut</th>
-        <td mat-cell *matCellDef="let entretien">{{ entretien.recruteur }}</td>
+    <ng-container matColumnDef="candidat">
+        <th mat-header-cell *matHeaderCellDef>Nom_candidat</th>
+        <td mat-cell *matCellDef="let entretien">{{ entretien.candidat.nom }}</td>
       </ng-container>
       <ng-container matColumnDef="recruteursuivant">
-        <th mat-header-cell *matHeaderCellDef>Statut</th>
+        <th mat-header-cell *matHeaderCellDef>Recruteur</th>
         <td mat-cell *matCellDef="let entretien">{{ entretien.recruteurSuivant }}</td>
       </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
+  </table></div>
+  <br>
+  </mat-card>
