--- a/accompany-consullting/src/app/listconsultant/listconsultant.component.html
+++ b/accompany-consullting/src/app/listconsultant/listconsultant.component.html
@@ -52,8 +52,9 @@
     </div>
      
     <br><br>
-    <div class="col-3">
-    <button style="font-size:19px" (click)=" generatePdf()">PDF <i class="fa fa-file-pdf-o"></i></button>
+    <div class="col-3 ">
+        
+    <button  class="text-white"style="background-color:rgb(226, 68, 68)  " (click)=" generatePdf()">PDF <i class="fa fa-file-pdf-o"></i></button>
 </div>
   
     <div>
