--- a/accompany-consullting/src/app/listconsultant/listconsultant.component.html
+++ b/accompany-consullting/src/app/listconsultant/listconsultant.component.html
@@ -53,8 +53,9 @@
      
     <br><br>
     <div class="col-3 ">
-        
-    <button  class="text-white"style="background-color:rgb(226, 68, 68)  " (click)=" generatePdf()">PDF <i class="fa fa-file-pdf-o"></i></button>
+        <button  class="text-white"style="background-color:rgb(226, 68, 68)  " (click)="pdf(type)">PDF <i class="fa fa-file-pdf-o"></i></button>
+
+
 </div>
   
     <div>
