--- a/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
+++ b/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
@@ -43,13 +43,12 @@
     </mat-form-field>
     
       <!-- ===================== -->
+      
+
       <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Date de naissance" name="date_naissance" formControlName="date_naissance" >
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+        <input  type="date" matInput placeholder="Date de naissance" name="date_naissance" formControlName="date_naissance" >
+       
       </mat-form-field>
-
-
       
       <!-- =================================== -->
       <mat-form-field>
