--- a/accompany-consullting/src/app/list-entretien/list-entretien.component.html
+++ b/accompany-consullting/src/app/list-entretien/list-entretien.component.html
@@ -16,13 +16,17 @@
 
 
 <div class="row col-12">
-<div class="col-1">
-    <button mat-raised-button color="primary" (click)="filteredEntretiensbyaction('Historique') ">Historique</button>
+  <div class="btn-group" role="group">
+    
+    <button type="button" class="btn btn-primary mr-2" (click)="filteredEntretiensbyaction('Historique')">
+         <i class="fa fa-history"></i> Historique
+    </button>
+    <button type="button" class="btn btn-primary" (click)="allentretien()">
+        <i class="fa fa-clock-o"></i> Entretien à faire
+    </button>
+  </div>
 </div>
-<div class="col-9">
-    <button mat-raised-button color="primary" (click)="allentretien()">Entretien à faire</button>
-</div>
-</div>
+
 
 
 <br>
@@ -82,23 +86,34 @@
       <ng-container matColumnDef="Action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let entretien">
-          <ng-container *ngIf="entretien.valid && entretien.recruteurSuivant == id ">
-            <button mat-raised-button color="primary" (click)=" onPasseClicked(entretien.candidat , entretien.recruteurSuivant , entretien.descriptionPoste , entretien.post  )">passe </button>
+          <ng-container *ngIf="entretien.valid && entretien.recruteurSuivant == id">
+            <button mat-raised-button class="btn btn-success btn-sm mr-2" (click)="onPasseClicked(entretien.candidat, entretien.recruteurSuivant, entretien.descriptionPoste, entretien.post)">
+              <i class="fa fa-check-circle"></i> Passe
+            </button>
           </ng-container>
           <ng-container *ngIf="entretien.valid && entretien.recruteurSuivant == 0">
-            <button mat-raised-button color="primary" (click)="buttondetail(entretien.candidat  ,  entretien.descriptionPoste , entretien.post  )" >Consulter</button>
+            <button mat-raised-button class="btn btn-primary btn-sm" (click)="buttondetail(entretien.candidat, entretien.descriptionPoste, entretien.post)">
+              <i class="fa fa-eye"></i> Consulter
+            </button>
           </ng-container>
-
           <ng-container *ngIf="!entretien.valid && entretien.recruteurSuivant == 0">
-            <button mat-raised-button color="primary" (click)="buttondetail(entretien.candidat , entretien.descriptionPoste , entretien.post  )" >Consulter</button>
+            <button mat-raised-button class="btn btn-primary btn-sm" (click)="buttondetail(entretien.candidat, entretien.descriptionPoste, entretien.post)">
+              <i class="fa fa-eye"></i> Consulter
+            </button>
           </ng-container>
-          
           <ng-container *ngIf="entretien.valid && entretien.recruteurSuivant != 0">
-            <button mat-raised-button color="primary" (click)="buttondetail(entretien.candidat , entretien.descriptionPoste , entretien.post  )" >Consulter</button>
+            <button mat-raised-button class="btn btn-primary btn-sm" (click)="buttondetail(entretien.candidat, entretien.descriptionPoste, entretien.post)">
+              <i class="fa fa-eye"></i> Consulter
+            </button>
           </ng-container>
           <ng-container *ngIf="!entretien.valid && entretien.recruteurSuivant != 0">
-            <button mat-raised-button color="primary" (click)="buttondetail(entretien.candidat ,entretien.descriptionPoste , entretien.post  )" >Consulter</button>
+            <button mat-raised-button class="btn btn-danger ml-2 btn-sm" (click)="buttondetail(entretien.candidat, entretien.descriptionPoste, entretien.post)">
+              <i class="fa fa-eye"></i> Consulter
+            </button>
           </ng-container>
+          
+          
+          
         
         </td>
 
