--- a/accompany-consullting/src/app/entretient/entretient.component.html
+++ b/accompany-consullting/src/app/entretient/entretient.component.html
@@ -1,162 +1,100 @@
-
-
 <mat-card>
-    <mat-card-content>
-        <mat-card-title>Entretien initial </mat-card-title>
-        
-<div class="container">
-    <div class="row">
-      <div class="col-md-6 offset-md-3 mt-5">
-     
-        <form [formGroup]="entretienForm">
-            <div class="p-20 bg-info ">
-                <h4 class="card-title text-white m-0 text-center">Description du poste </h4></div>
-         
+  <mat-card-content>
+    <mat-card-title>Entretien initial</mat-card-title>
 
-                
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-md-3 mt-5">
 
+          <form [formGroup]="entretienForm">
+            <div class="p-20 bg-info">
+              <h4 class="card-title text-white m-0 text-center">Description du poste</h4>
+            </div>
 
-
-
-
-                <fieldset>
-                    <div class="fieldset-content"> 
-          
+            <fieldset>
+              <div class="fieldset-content">
                 <mat-form-field class="col-md-4">
-                    <input matInput placeholder="Post" name="post" formControlName="post" required>
-                    
-                   
-                  </mat-form-field>
-                  <mat-form-field>
-                    <input matInput placeholder="description Poste" name="descriptionPoste" formControlName="descriptionPoste" required>
-                    
-                   
-                  </mat-form-field>
-                  </div></fieldset>
+                  <input matInput placeholder="Post" name="post" formControlName="post" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Description Poste" name="descriptionPoste" formControlName="descriptionPoste" required>
+                </mat-form-field>
+              </div>
+            </fieldset>
 
-<!------------------------------------------------------------------------------------------>
+            <!-- Profil du Candidat -->
+            <div class="p-20 bg-info">
+              <h4 class="card-title text-white m-0 text-center">Profil du Candidat</h4>
+            </div>
 
-<div class="p-20 bg-info ">
-    <h4 class="card-title text-white m-0 text-center">Profil du Candidat
-    </h4></div>
+            <fieldset>
+              <div class="fieldset-content">
+                <mat-form-field class="col-md-4">
+                  <input matInput placeholder="Nom" name="nom" formControlName="nom" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Prénom" name="prenom" formControlName="prenom" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Email" name="email" formControlName="email" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Mobile 1" name="tel1" formControlName="tel1" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Mobile 2" name="tel2" formControlName="tel2" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <input matInput placeholder="Compétence" name="competence" formControlName="competence" required>
+                </mat-form-field>
+                <div>
+                  <label>CV (PDF):</label>
+                  <input type="file" (change)="onFileSelected($event)" />
+                </div>
+              </div>
+            </fieldset>
 
-    <fieldset>
-        <div class="fieldset-content"> 
+            <!-- Avis de recruteur -->
+            <div class="p-20 bg-info">
+              <h4 class="card-title text-white m-0 text-center">Avis de recruteur</h4>
+            </div>
 
-    <mat-form-field class="col-md-4">
-        <input matInput placeholder="Nom" name="nom" formControlName="nom" required>
-        
-       
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Prenom" name="prenom" formControlName="prenom" required>
-        
-       
-      </mat-form-field>
+            <fieldset>
+              <div class="fieldset-content">
+                <mat-form-field class="col-md-4">
+                  <input matInput placeholder="Avis" name="avis" formControlName="avis" required>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-label>Décision</mat-label>
+                  <mat-select formControlName="statut">
+                    <mat-option value="GO">GO</mat-option>
+                    <mat-option value="NOTGO">NOT GO</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </fieldset>
 
-      <mat-form-field>
-        <input matInput placeholder="Email" name="email" formControlName="email" required>
-        
-       
-      </mat-form-field>
+            <br><br>
+            <section>
+              <div class="example-button-row">
+                <mat-action-row class="rows">
+                  <button mat-fab color="primary" (click)="annuler()" aria-label="Home">
+                    <mat-icon>home</mat-icon>
+                  </button>
 
-      <mat-form-field>
-        <input matInput placeholder="Mobile 1" name="tel1" formControlName="tel1" required>
-        
-       
-      </mat-form-field>
+                  <button mat-fab color="primary" (click)="addEntretien()" aria-label="Open in new tab">
+                    <mat-icon>open_in_new</mat-icon>
+                  </button>
 
-      
-      <mat-form-field>
-        <input matInput placeholder="Mobile 2" name="tel2" formControlName="tel2" required>
-        
-       
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Competance" name="competance" formControlName="competance" required>
-        
-       
-      </mat-form-field>
-
-
-   
-
-
-      <div>
-        <label>CV (PDF):</label>
-        <input type="file" (change)="onFileSelected($event)" />
-      </div>
-
-
-
-
-      </div></fieldset>
-              
-
-
-<!---------------------------------------      Avis de recruteur  --------------------------------------------------->
-
-
-
-<div class="p-20 bg-info ">
-    <h4 class="card-title text-white m-0 text-center"> Avis de recruteur </h4></div>
-
-    <fieldset>
-        <div class="fieldset-content"> 
-
-    <mat-form-field class="col-md-4">
-        <input matInput placeholder="avis" name="avis" formControlName="avis" required>
-        
-       
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Decision</mat-label>
-        <mat-select formControlName="statut">
-          <mat-option value="GO">GO</mat-option>
-          <mat-option value="NOTGO">NOT GO</mat-option>
-        </mat-select>
-
-
-
-
-
-        
-      </mat-form-field>
-      </div></fieldset>
-
-
-      <br><br>
-      <section >
-        <div class="example-button-row">
-          <mat-action-row class="rows">
-            <button  mat-fab style="background-color:rgb(221, 68, 68)" (click)="annuler()" aria-label="Example icon button with a home icon">
-              <mat-icon>home</mat-icon>
-            </button>
-      
-            <button mat-fab style="background-color: rgb(19, 126, 19);"  (click)="addEntretien()" aria-label="Example icon button with a home icon">
-              <mat-icon >open_in_new</mat-icon>
-            </button>
-      
-            <button class="col-4 " mat-fab color="accent" (click)="add()" *ngIf="entretienForm.controls.statut.value === 'GO'" aria-label="Example icon button with a plus one icon">
-              <mat-icon>plus_one</mat-icon>
-            </button>
-            <!-- Modifier le bouton "+Entretien" pour qu'il utilise *ngIf -->
-          </mat-action-row>
+                  <button mat-fab color="accent" (click)="add()" *ngIf="entretienForm.controls.statut.value === 'GO'" aria-label="Add">
+                    <mat-icon>plus_one</mat-icon>
+                  </button>
+                </mat-action-row>
+              </div>
+            </section>
+          </form>
         </div>
-      </section>
-      
-
-        </form>
       </div>
     </div>
-  </div>
-
-
-
-
-
-
-
-</mat-card-content>
-  </mat-card>
+  </mat-card-content>
+</mat-card>
