--- a/accompany-consullting/src/app/listconsultant/listconsultant.component.html
+++ b/accompany-consullting/src/app/listconsultant/listconsultant.component.html
@@ -3,33 +3,34 @@
 
 <mat-card>
     <div class="p-20 bg-info position-relative">
-        <h4 class="card-title text-white m-0">Liste des consultants </h4>
-   
-            <div class="search-container">
-                <mat-form-field appearance="fill">
-                  <mat-label>Rechercher un consultant</mat-label>
-                  <input matInput placeholder="Nom ou prénom de consultant" [(ngModel)]="searchTerm" (keyup)="onSearch()">
-                  <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchTerm" (click)="clearSearchTerm()">
-
-                    <mat-icon>close</mat-icon>
-                  </button>
-                </mat-form-field>
-
-        </div>
-
-    </div>
+        <h4 class="card-title text-white m-0">Liste des consultants</h4>
+     
+      </div>
+      <div class="search-container d-flex align-items-center justify-content-end">
+        <mat-form-field appearance="fill" class="mb-0">
+          <mat-label>Rechercher un consultant</mat-label>
+          <input matInput placeholder="Nom ou prénom de consultant" [(ngModel)]="searchTerm" (keyup)="onSearch()">
+          <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchTerm" (click)="clearSearchTerm()">
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
     <br>
 
     <div class="row col-12">
-        <div class="col-1">
-            <button mat-raised-button color="primary" (click)="filterConsultantsByStatus('actif')">Actif</button>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-primary mr-2" (click)="filterConsultantsByStatus('actif')">
+            <i class="fa fa-check-circle"></i> Actif
+          </button>
+          <button type="button" class="btn btn-primary mr-2" (click)="filterConsultantsByStatus('inactif')">
+            <i class="fa fa-times-circle"></i> Inactif
+          </button>
+          <button type="button" class="btn btn-primary" (click)="filterConsultantsByStatus('')">
+            <i class="fa fa-list"></i> Tous
+          </button>
         </div>
-        <div class="col-1">
-            <button mat-raised-button color="primary" (click)="filterConsultantsByStatus('inactif')">Inactif</button>
-        </div>
-        <div class="col-9">
-            <button mat-raised-button color="primary" (click)="filterConsultantsByStatus('')">Tous</button>        </div>
-    </div>
+      </div>
+      
     
     
     
@@ -43,18 +44,17 @@
     <br>
     <br>
     <div class="row col-12">
-        <div class="col-1">
-            <button type="button" class="btn btn-outline-info" (click)="add()">Ajouter</button>        </div>
-        <div class="col-1">
-            <button type="button" class="btn btn-outline-info" (click)="onEdit()">Modifier</button>        </div>
-        <div class="col-9">
-            <button type="button" class="btn btn-outline-info" (click)="onconsulte()">Consulter</button>        </div>
+        <button type="button" class="btn btn-outline-info mr-2" (click)="add()"><i class="fa fa-plus"></i> Ajouter</button>
+        <button type="button" class="btn btn-outline-info mr-2" (click)="onEdit()"><i class="fa fa-pencil"></i> Modifier</button>
+        <button type="button" class="btn btn-outline-info" (click)="onconsulte()"><i class="fa fa-eye"></i> Consulter</button>
     </div>
+    
      
     <br><br>
     <div class="col-3 ">
-        <button  class="text-white"style="background-color:rgb(226, 68, 68)  " (click)="pdf(type)">PDF <i class="fa fa-file-pdf-o"></i></button>
-
+        <button class="text-white" style="background-color: rgb(226, 68, 68);" (click)="pdf(type)">
+            <i class="fa fa-file-pdf-o"></i> PDF
+          </button>
 
 </div>
   
@@ -62,43 +62,45 @@
         <br>
         <br>
         <div class="col-12">
-            <table class="table mat-elevation-z8" style="width: 100%;" mat-table [dataSource]="filteredConsultants">
-         
-
-               <ng-container matColumnDef="select">
-  <th mat-header-cell *matHeaderCellDef>select</th>
-  <td mat-cell *matCellDef="let row">
-    <mat-checkbox (click)="$event.stopPropagation()"
-                  (change)="onConsultantSelectionChange($event, row)"
-                  [checked]="selection.isSelected(row)">
-    </mat-checkbox>
-  </td>
-</ng-container>
-
-
-
-
-
-            <ng-container matColumnDef="nom prenom">
-                <th mat-header-cell *matHeaderCellDef class="thead-info"> Nom &Prenom </th>
-                <td mat-cell *matCellDef="let consultant">{{consultant.nom}} {{ consultant.prenom }} </td>
-            </ng-container>
-            <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef class="thead-info"> Status</th>
-                <td mat-cell *matCellDef="let consultant"> {{ consultant.status}} </td>
-            </ng-container>
-            <ng-container matColumnDef="date_integration">
-                <th mat-header-cell *matHeaderCellDef class="thead-info"> Date d'integration </th>
-                <td mat-cell *matCellDef="let consultant"> {{ consultant.date_integration | date:'dd-MM-yyyy' }} </td>
-            </ng-container>
-<div class="col-3">
-            <ng-container matColumnDef="grade">
-                <th mat-header-cell *matHeaderCellDef class="thead-info"> Grade</th>
-                <td mat-cell *matCellDef="let consultant"> {{ consultant.grade}} </td>
-            </ng-container> </div>
-            <tr mat-header-row *matHeaderRowDef="['select','nom prenom', 'status', 'date_integration','grade']"></tr>
-  <tr mat-row *matRowDef="let row; columns: ['select','nom prenom', 'status', 'date_integration','grade'];"></tr>
-        </table></div></div>
+            <table class="table table-striped table-hover" mat-table [dataSource]="filteredConsultants">
+                <ng-container matColumnDef="select">
+                  <th mat-header-cell *matHeaderCellDef>select</th>
+                  <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()"
+                                  (change)="onConsultantSelectionChange($event, row)"
+                                  [checked]="selection.isSelected(row)">
+                    </mat-checkbox>
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="nom prenom">
+                  <th mat-header-cell *matHeaderCellDef class="thead-info">Nom & Prenom</th>
+                  <td mat-cell *matCellDef="let consultant">{{ consultant.nom }} {{ consultant.prenom }}</td>
+                </ng-container>
+                    <!-- ... -->
+                    <ng-container matColumnDef="status">
+                      <th mat-header-cell *matHeaderCellDef class="thead-info">Status</th>
+                      <td mat-cell *matCellDef="let consultant" [ngClass]="{'mat-badge mat-badge-primary': consultant.status === 'Inactif', 'mat-badge mat-badge-danger': consultant.status === 'Actif'}">{{ consultant.status }}</td>
+                   
+                     
+                   
+                    </ng-container>
+                    <!-- ... -->
+               
+                  
+                <ng-container matColumnDef="date_integration">
+                  <th mat-header-cell *matHeaderCellDef class="thead-info">Date d'integration</th>
+                  <td mat-cell *matCellDef="let consultant">{{ consultant.date_integration | date:'dd-MM-yyyy' }}</td>
+                </ng-container>
+                <ng-container matColumnDef="grade">
+                  <th mat-header-cell *matHeaderCellDef class="thead-info">Grade</th>
+                  <td mat-cell *matCellDef="let consultant">{{ consultant.grade }}</td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="['select', 'nom prenom', 'status', 'date_integration', 'grade']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['select', 'nom prenom', 'status', 'date_integration', 'grade'];"></tr>
+              </table>
+              
+          </div>
+          </div>
     
         <mat-paginator [length]="consultants.length"
         [pageSize]="pageSize"
