--- a/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
+++ b/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
@@ -34,3 +34,4 @@
   <!-- Bouton pour dupliquer le formulaire -->
   <button type="button" (click)="dupliquerFormulaire()">Dupliquer le formulaire</button>
 </form>
+<app-mission></app-mission>
