--- a/accompany-consullting/src/app/mission/mission.component.html
+++ b/accompany-consullting/src/app/mission/mission.component.html
@@ -1,70 +1,50 @@
-<p>mission works!</p>
-<form (ngSubmit)="submitForm()">
+<table class="mission-table">
+  <tr>
+    <td>
+      <form [formGroup]="missionForm" (ngSubmit)="submitForm()">
+        <div>
+          <label for="titre">Titre :</label>
+          <input type="text" id="titre" formControlName="titre" required>
+        </div>
+        <div>
+          <label for="roleC">Rôle et responsabilite  Consultant :</label>
+          <input type="text" id="roleC" formControlName="roleC" required>
+          <label for="roleC">Rôle et responsabilite  Rh :</label>
+
+          <input type="text" id="roleRH" formControlName="roleRH" required>
+
+        </div>
+    
+        <div>
+          <label for="relationClientRH">Relation Client RH :</label>
+          <input type="text" id="relationClientRH" formControlName="relationClientRH" required>
+        </div>
+        <div>
+          <label for="relationClientC">Relation Client Consultant :</label>
+          <input type="text" id="relationClientC" formControlName="relationClientC" required>
+        </div>
+        <div>
+          <label for="chargeRH">Charge RH :</label>
+          <input type="text" id="chargeRH" formControlName="chargeRH" required>
+        </div>
+        <div>
+          <label for="chargeC">Charge Consultant :</label>
+          <input type="text" id="chargeC" formControlName="chargeC" required>
+        </div>
+        <div>
+          <label for="satisficationRH">Satisfaction RH :</label>
+          <input type="text" id="satisficationRH" formControlName="satisficationRH" required>
+        </div>
+        <div>
+          <label for="satisficationC">Satisfaction Consultant :</label>
+          <input type="text" id="satisficationC" formControlName="satisficationC" required>
+        </div>
+
+        <button type="submit" [disabled]="!missionForm.valid">Ajouter la mission</button>
+      </form>
+    </td>
+  </tr>
+</table>
+
   
-    <div>
-      <label for="titre">Titre:</label>
-      <input type="text" id="titre" name="titre" [(ngModel)]="mission.titre">
-    </div>
-    <div>
-      <label for="roleRH">Role RH:</label>
-      <input type="text" id="roleRH" name="roleRH" [(ngModel)]="mission.roleRH" required>
-    </div>
-    <div>
-      <label for="roleC">Role C:</label>
-      <input type="text" id="roleC" name="roleC" [(ngModel)]="mission.roleC" required>
-    </div>
-    <div>
-      <label for="relationClientRH">Relation client RH:</label>
-      <select id="relationClientRH" name="relationClientRH" [(ngModel)]="mission.relationClientRH" required>
-        <option value="Insuffisant">Insuffisant</option>
-        <option value="Moyennement satisfait">Moyennement satisfait</option>
-        <option value="Satisfait">Satisfait</option>
-        <option value="Très satisfait">Très satisfait</option>
-      </select>
-    </div>
-    <div>
-      <label for="relationClientC">Relation client C:</label>
-      <select id="relationClientC" name="relationClientC" [(ngModel)]="mission.relationClientC" required>
-        <option value="Insuffisant">Insuffisant</option>
-        <option value="Moyennement satisfait">Moyennement satisfait</option>
-        <option value="Satisfait">Satisfait</option>
-        <option value="Très satisfait">Très satisfait</option>
-      </select>
-    </div>
-    <div>
-      <label for="chargeRH">Charge RH:</label>
-      <input type="text" id="chargeRH" name="chargeRH" [(ngModel)]="mission.chargeRH" required>
-    </div>
-    <div>
-      <label for="chargeC">Charge C:</label>
-      <input type="text" id="chargeC" name="chargeC" [(ngModel)]="mission.chargeC" required>
-    </div>
-    <div>
-      <label for="satisficationRH">Satisfication RH:</label>
-      <select id="satisficationRH" name="satisficationRH" [(ngModel)]="mission.satisficationRH" required>
-        <option value="Insuffisant">Insuffisant</option>
-        <option value="Moyennement satisfait">Moyennement satisfait</option>
-        <option value="Satisfait">Satisfait</option>
-        <option value="Très satisfait">Très satisfait</option>
-      </select>
-    </div>
-    <div>
-      <label for="satisficationC">Satisfication C:</label>
-      <select id="satisficationC" name="satisficationC" [(ngModel)]="mission.satisficationC" required>
-        <option value="Insuffisant">Insuffisant</option>
-        <option value="Moyennement satisfait">Moyennement satisfait</option>
-        <option value="Satisfait">Satisfait</option>
-        <option value="Très satisfait">Très satisfait</option>
-      </select>
-    </div>
-    <div>
-      <label for="noteManager">Note Manager:</label>
-      <input type="text" id="noteManager" name="noteManager" [(ngModel)]="mission.noteManager">
-    </div>
-    <div>
-      <label for="feedbackManager">Feedback Manager:</label>
-      <textarea id="feedbackManager" name="feedbackManager" [(ngModel)]="mission.feedbackManager"></textarea>
-    </div>
-    <button type="submit">Ajouter</button>
-  </form>
   
