--- a/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
+++ b/accompany-consullting/src/app/eval-rh-integration/eval-rh-integration.component.html
@@ -1,4 +1,4 @@
-<p>eval-rh-integration works!</p>
+<p>{{consultantnom }}</p>
 
 <form>
   <div *ngFor="let formulaire of formulairesDupliques; let i = index" class="formulaire-container">
