--- a/accompany-consullting/src/app/consultantdetail/consultantdetail.component.html
+++ b/accompany-consullting/src/app/consultantdetail/consultantdetail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="scrollable-content"><div class="container">
     <div class="row">
       <div class="col-md-3">
         <div class="card">
@@ -104,5 +104,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div></div>
   
