--- a/accompany-consullting/src/app/entretient/entretient.component.html
+++ b/accompany-consullting/src/app/entretient/entretient.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-content>
-    <mat-card-title>Entretien initial</mat-card-title>
+    <mat-card-title style="text-align: center ;color: blue; font-size: x-large;">Entretien initial</mat-card-title>
 
     <div class="container">
       <div class="row">
