--- a/accompany-consullting/src/app/entretientdetail/entretientdetail.component.html
+++ b/accompany-consullting/src/app/entretientdetail/entretientdetail.component.html
@@ -1,57 +1,76 @@
- <mat-card>
+<mat-card>
     <mat-card-content>
-<div class="container">
-    <div class="row">
-      <div class="col-md-6 offset-md-3 mt-5">
-     
-   
-     
-  <div class="p-20 bg-info ">
-    <h4 class="card-title text-white m-0 text-center"> Description du poste </h4></div>
-    <fieldset>
-        <div class="fieldset-content"> 
-
-    <div class="col-md-4">
-        <span style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">{{post}}</span>
-       <h4><span style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Description : </span>{{descriptionPoste}}</h4>
-      
-        
-    </div>
-    </div></fieldset>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 mt-5">
 
 
 
-<!--candidat detail -->
-<div class="p-20 bg-info ">
-    <h4 class="card-title text-white m-0 text-center"> Candidat detail </h4></div>
+                    <div class="p-20 bg-info ">
+                        <h4 class="card-title text-white m-0 text-center"> Description du poste </h4>
+                    </div>
+                    <fieldset>
+                        <div class="fieldset-content">
+
+                            <div class="col-md-4">
+                                <span
+                                    style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">{{post}}</span>
+                                <h4><span
+                                        style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Description
+                                        : </span>{{descriptionPoste}}</h4>
 
 
-    <fieldset>
-        <div class="fieldset-content"> 
-
-    <div class="col-md-4">
-        <p>    <span style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">Nom :</span>{{candidatprofil.nom}}</p>
-       <h4><span style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Prenom  : </span>{{candidatprofil.prenom}}</h4>
-      
-        
-    </div>
-    </div></fieldset>
-
-    <div class="p-20 bg-info ">
-        <h4 class="card-title text-white m-0 text-center"> les anciens entretiens </h4></div>
-    <mat-tab-group>
-        <mat-tab *ngFor="let e of entretients ; let i = index">
-          <fieldset>
-            
-            <legend>Entretien numero : {{ i +1}} </legend>
-            <p><span style="font-family: Georgia, 'Times New Roman', Times, serif; color: blue; font-size: large;"> Ancien Recruteur :  </span> {{ e.nom_recruteur}}</p>
-        
-            <p><span style="font-family: Georgia, 'Times New Roman', Times, serif; color: blue; font-size: large;"> Avis :  </span> {{ e.avis}}</p>
-            <p style="color: brown;">{{e.statut}}</p>
-
-        </fieldset>
-        </mat-tab>
-      </mat-tab-group>
+                            </div>
+                        </div>
+                    </fieldset>
 
 
-</div></div></div></mat-card-content></mat-card>
+
+                    <!--candidat detail -->
+                    <div class="p-20 bg-info ">
+                        <h4 class="card-title text-white m-0 text-center"> Candidat detail </h4>
+                    </div>
+
+
+                    <fieldset>
+                        <div class="fieldset-content">
+
+                            <div class="col-md-4">
+                                <p> <span
+                                        style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">Nom
+                                        :</span>{{candidatprofil.nom}}</p>
+                                <h4><span
+                                        style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Prenom
+                                        : </span>{{candidatprofil.prenom}}</h4>
+
+
+                            </div>
+                        </div>
+                    </fieldset>
+
+                    <div class="p-20 bg-info ">
+                        <h4 class="card-title text-white m-0 text-center"> les anciens entretiens </h4>
+                    </div>
+                    <div *ngFor="let e of entretients ; let i = index">
+                        
+                            <fieldset>
+
+                                <legend>Entretien numero : {{ i +1}} </legend>
+                                <p><span
+                                        style="font-family: Georgia, 'Times New Roman', Times, serif; color: blue; font-size: large;">
+                                        Ancien Recruteur : </span> {{ e.nom_recruteur}}</p>
+
+                                <p><span
+                                        style="font-family: Georgia, 'Times New Roman', Times, serif; color: blue; font-size: large;">
+                                        Avis : </span> {{ e.avis}}</p>
+                                <p style="color: brown;">{{e.statut}}</p>
+
+                            </fieldset>
+                       
+                    </div >
+
+
+                </div>
+            </div>
+        </div>
+    </mat-card-content></mat-card>
