--- a/accompany-consullting/src/app/evaluation/evaluation.component.html
+++ b/accompany-consullting/src/app/evaluation/evaluation.component.html
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef class="thead-info"> <span class="table-title">Action</span> </th>
       <td mat-cell *matCellDef="let consultant" [ngClass]="{'highlight-row': isNextEvaluationToday(consultant)}">
-        <button mat-icon-button color="primary" (click)="evaluerConsultant(consultant.id)">
+        <button mat-icon-button color="primary" (click)="evaluerConsultant(consultant.id,consultant.nom, consultant.prenom , consultant.date_integration , consultant.grade)">
           <mat-icon>play_arrow</mat-icon>
         </button>
       </td>
