--- a/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
+++ b/accompany-consullting/src/app/updateconsultant/updateconsultant.component.html
@@ -1,10 +1,11 @@
+<div class="scrollable-content">
 
 <mat-card>
     <mat-card-content>
-    <mat-card-title>Bienvenue</mat-card-title>
+    <mat-card-title style="text-align: center;" >Bienvenue</mat-card-title>
   
   
-    <mat-card-subtitle>Modifier  Consultant</mat-card-subtitle>
+    <mat-card-subtitle style="text-align: center;">Modifier  Consultant</mat-card-subtitle>
   
   
   
@@ -235,4 +236,4 @@
   
   
   
-    </mat-card-content></mat-card>
+    </mat-card-content></mat-card></div>
